tests/error/pointer_unknown.gw
// [contains] unknown type
 typedef unknown_type (my_function)(){}
